# ems-model

./: .gitignore  README.md  api.py  ems_data.csv  hello.py  main.py  model.ipynb  model.py  pyproject.toml  shuffle.py  treatment.py
csv/: ems_data.csv  ems_journal.csv
