[project]
name = "ems-model"
version = "0.1.0"
description = "model for ems-sense, detecting mutagenesis treatment using ems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
